# dnbot

./: .gitignore  Cargo.toml  rustfmt.toml
common/: Cargo.toml
common/src/: display.rs  handler.rs  lib.rs  storage.rs
docker/galaxyofdreams/: Dockerfile
docker/goatshed/: Dockerfile
galaxyofdreams/: config.rs  main.rs
galaxyofdreams/modules/: astronauts.rs  commands.rs  filter.rs  joined.rs  link_only.rs  mod.rs  role_assign.rs  youtube.rs
goatshed/: config.rs  main.rs  radio.rs
voice/: Cargo.toml
voice/src/: ffmpeg.rs  lib.rs
